<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.psweeney.wonderfuldoodle.MainDoodle"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.example.psweeney.wonderfuldoodle.DoodleView
            android:layout_width="match_parent"
            android:layout_height="426dp"
            android:foregroundTint="#000000"
            android:layout_gravity="center_horizontal|top"
            android:id="@+id/doodleView" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rowOrderPreserved="false"
            android:useDefaultMargins="false"
            android:visibility="visible"
            android:outlineProvider="bounds"
            android:id="@+id/buttonGrid">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_label"
                android:id="@+id/buttonColor"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_gravity="center_vertical"
                android:onClick="onColorButtonClicked" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brush_label"
                android:id="@+id/buttonBrush"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_gravity="center"
                android:onClick="onBrushButtonClicked" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_label"
                android:id="@+id/buttonClear"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_gravity="center_vertical"
                android:onClick="onClearButtonClicked" />
        </GridLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:id="@+id/brushMenuLinear"
        android:transitionGroup="true"
        android:visibility="invisible">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="0.08"></FrameLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="180dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/color_0_label"
                android:id="@+id/brushMenuAlphaTitle"
                android:layout_column="0"
                android:layout_row="1" />

            <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/brushMenuAlphaSlider"
                android:layout_column="1"
                android:layout_row="1"
                android:layout_columnSpan="3"
                android:layout_gravity="fill_horizontal"
                android:progress="255"
                android:max="255" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/color_255_label"
                android:id="@+id/brushMenuAlphaLeftLabel"
                android:layout_column="4"
                android:layout_row="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/alpha_label"
                android:id="@+id/brushMenuAlphaRightLabel"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnSpan="5"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/stroke_width_label"
                android:id="@+id/brushMenuStrokeWidthTitle"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_columnSpan="5"
                android:layout_gravity="center_horizontal"
                android:paddingTop="50dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/stroke_width_1_label"
                android:id="@+id/brushMenuStrokeWidthLeftLabel"
                android:layout_column="0"
                android:layout_row="3" />

            <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/brushMenuStrokeWidthSlider"
                android:layout_column="1"
                android:layout_columnSpan="3"
                android:layout_row="3"
                android:layout_gravity="fill_horizontal"
                android:max="49"
                android:progress="4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/stroke_width_50_label"
                android:id="@+id/brushMenuStrokeWidthRightLabel"
                android:layout_column="4"
                android:layout_row="3" />

        </GridLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:id="@+id/colorMenuLinear"
        android:transitionGroup="true"
        android:visibility="invisible" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="0.08" >

        </FrameLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_weight="0.63">

            <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/colorMenuRedSlider"
                android:layout_column="1"
                android:layout_row="1"
                android:layout_columnSpan="3"
                android:layout_gravity="fill_horizontal"
                android:progress="0"
                android:max="255" />

            <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/colorMenuGreenSlider"
                android:layout_column="1"
                android:layout_columnSpan="3"
                android:layout_row="3"
                android:layout_gravity="fill_horizontal"
                android:max="255"
                android:progress="0" />

            <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/colorMenuBlueSlider"
                android:layout_row="5"
                android:layout_column="1"
                android:layout_columnSpan="3"
                android:layout_gravity="fill_horizontal"
                android:progress="0"
                android:max="255" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/color_0_label"
                android:id="@+id/textView"
                android:layout_column="0"
                android:layout_row="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/color_255_label"
                android:id="@+id/textView2"
                android:layout_column="4"
                android:layout_row="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/red_label"
                android:id="@+id/textView3"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnSpan="5"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/green_label"
                android:id="@+id/textView4"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_columnSpan="5"
                android:layout_gravity="center_horizontal"
                android:paddingTop="50dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/color_0_label"
                android:id="@+id/textView5"
                android:layout_column="0"
                android:layout_row="3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/color_255_label"
                android:id="@+id/textView6"
                android:layout_column="4"
                android:layout_row="3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/blue_label"
                android:id="@+id/textView7"
                android:layout_row="4"
                android:layout_column="0"
                android:layout_columnSpan="5"
                android:layout_gravity="center_horizontal"
                android:paddingTop="50dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/color_0_label"
                android:id="@+id/textView8"
                android:layout_column="0"
                android:layout_row="5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/color_255_label"
                android:id="@+id/textView9"
                android:layout_column="4"
                android:layout_row="5" />

        </GridLayout>

    </LinearLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/undoButton"
        android:src="@android:drawable/ic_menu_revert"
        android:layout_alignParentStart="true"
        android:onClick="onUndoButtonClicked"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/undo_button_content_description" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/redoButton"
        android:src="@android:drawable/ic_menu_revert"
        android:layout_gravity="right|top"
        android:layout_alignParentEnd="true"
        android:onClick="onRedoButtonClicked"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/redo_button_content_description"
        android:scaleX="-1"/>

</RelativeLayout>
